--- a/assignment1/2068-assignment1/views/partials/footer.ejs
+++ b/assignment1/2068-assignment1/views/partials/footer.ejs
@@ -1,5 +1,5 @@
         <footer class="alert alert-info">
-            &copy; 2016 | Lesson 4
+            &copy; 2016 | Assignment 1
         </footer>
     </body>
 </html>
