--- a/assignment1/2068-assignment1/views/partials/header.ejs
+++ b/assignment1/2068-assignment1/views/partials/header.ejs
@@ -9,7 +9,9 @@
         <nav class="navbar navbar-default">
             <ul>
                 <li><a href="/">Home</a><li>
-                <li><a href="/users">Users</a><li>
-                <li><a href="/random">Random</a><li>
+                <li><a href="/about">About</a><li>
+                <li><a href="/projects">Projects</a><li>
+                <li><a href="/services">Services</a><li>
+                <li><a href="/contact">Contact</a><li>
             </ul>
         </nav>
