--- a/assignment1/2068-assignment1/views/about.ejs
+++ b/assignment1/2068-assignment1/views/about.ejs
@@ -23,7 +23,7 @@
 					<span class="word-rotate-items">
 						<span>success.</span>
 						<span>advancement.</span>
-						<span>progress.</span>
+						<span>progression.</span>
 					</span>
 				</span>
 			</strong>
@@ -34,8 +34,10 @@
 <div class="row">
 	<div class="col-md-10">
 		<p class="lead">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum pellentesque imperdiet. Nulla lacinia iaculis nulla non <span class="alternative-font">metus.</span> pulvinar. Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut eu risus enim, ut pulvinar lectus. Sed hendrerit nibh.
+			Tired of working with people who don't care? Want to work with someone who genuinely cares about his work both front-end and back? Do it right the first time and get in touch with me using the button to the right. <!-- Sorry Rich, I never said I was fast -->
 		</p>
+		<p>
+			Unlike others, I enjoy taking the time for the little things. Though at the expense of my time, when it is all done and wrapped up, it is worth it.  
 	</div>
 	<div class="col-md-2">
 		<a href="mailto:matt@tmgs.ca?Subject=WorkForce Box" class="btn btn-lg btn-primary mt-xl">Email Me!</a>
@@ -52,10 +54,10 @@
 	<div class="col-md-8">
 		<h3 class="heading-primary"><strong>Who</strong> I am</h3>
 		<p>
-			I am not one for talking about myself, so instead maybe I will state the facts. I am a student and a entrepreneur. I am on my way to becoming a official Computer Programmer. Last year, with help from the college, I had launched my business and was successful over the summer. I know spend all my time doing well in school and serving my clients. 
+			I am not one for talking about myself, so instead maybe I will just state the facts and go from there. I am a student and an entrepreneur. I am on my way to becoming an official Computer Programmer. Last year, with help from the college, I had launched my business and was successful over the summer. I know spend all my time doing well in school and serving my clients.. 
 		</p>
 		<p>
-			more text here
+			I have extensive experience in fields other than my own. I can nearly fix any problem on a vehicle, computer or even a furnace. Jack of all trades and nearly master of none, I have decided to specialize in my favourite fields and leave some as hobbies. My plans for the future require that I make some decent money and without schooling, I had a hard time finding work that paid well. Therefore, here I am.
 		</p>
 	</div>
 	<div class="col-md-4">
