--- a/assignment1/2068-assignment1/views/services.ejs
+++ b/assignment1/2068-assignment1/views/services.ejs
@@ -14,32 +14,29 @@
 <div class="services-main">
 	<div class="col-lg-4  col-md-4 col-sm-4">
 		<div class="service_first">
-
-			<!--<img src="images/canon.png" alt=""/>-->
 			<h1 class="heading">Website Development</h1>
-				<p>
-					Does your companies website need a face lift? I build websites with WordPress or custom code. I spend the time to make sure your website is attractive, performs well and has the latest S.E.O tricks to bump you up rankings. Take a look at my <a href="/projects">Projects Page</a> to see some work done for clients.
-				</p>
-			</div>
+			<p>
+				Does your companies website need a face lift? I build websites with WordPress or custom code. I spend the <strong>time</strong> to make sure your website is attractive, performs well and has the latest S.E.O tricks to bump you up rankings. Take a look at my <a href="/projects">Projects Page</a> to see some work done.
+			</p>
+			<image class="well" src="./images/tmgs.jpg" />
 		</div>
-			<div class="col-lg-4  col-md-4 col-sm-4">
-			<div class="service_first">
-		
-			<!--<img src="images/canon.png" alt=""/>-->
+	</div>
+	<div class="col-lg-4  col-md-4 col-sm-4">
+		<div class="service_first">
 			<h1 class="heading">Hosting, Management and Storage</h1>
 			<p>
 				I can offer a variety of services in hosting, management and storage solutions. I have a fully redunant system in place that I am improving on everyday. I can offer <abbr title = "Linux Apache MySQL PHP">LAMP</abbr>, <abbr title = "MongoDB Express AngularJS Node">MEAN</abbr>, <a href="http://www.freenas.org/">freeNas</a>, <a href="https://pfsense.org/">Pfsense</a> and more deployments in house or at your location.
 			</p>
+			<image class="well" src="./images/hosting.jpg" />
 		</div>
-		</div>
-			<div class="col-lg-4  col-md-4 col-sm-4">
-			<div class="service_first">
-			
-			<!--<img src="images/canon.png" alt=""/>-->
+	</div>
+	<div class="col-lg-4  col-md-4 col-sm-4">
+		<div class="service_first">
 			<h1 class="heading">Workforce Box</h1>
 			<p>
 				A new tool for managing your business. Track jobs, track employee's, track payments and more. Developed in-house and continuously improved with new features, security and greater userbility. To learn more, contact me at <a href="mailto:matt@tmgs.ca?Subject=WorkForce Box">matt@tmgs.ca</a>
 			</p>
+			<image class="well" src="./images/wfb.jpg" />
 		</div>
 	</div>
 </div>
