--- a/assignment1/2068-assignment1/views/contact.ejs
+++ b/assignment1/2068-assignment1/views/contact.ejs
@@ -22,32 +22,32 @@
 			<div class="alert alert-danger"><span class="glyphicon glyphicon-alert"></span><strong> Error! Please check the inputs. (If form error!)</strong></div>
 		</div>-->
 
-		<form role="form" action="" method="post" >
+		<form role="form" action='/contact' name='contactus', id='contactus' method="post" >
 			<div class="col-lg-6">
 			<!--<div class="well well-sm"><strong><i class="glyphicon glyphicon-ok form-control-feedback"></i> Required Field</strong></div>-->
 
 				<div class="form-group">
-					<label for="InputName">Your Name</label>
+					<label for="name">Your Name</label>
 					<div class="input-group">
 					<input type="text" class="form-control" name="InputName" id="InputName" placeholder="Enter Name" required>
 					<span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
 				</div>
 				<div class="form-group">
-					<label for="InputEmail">Your Email</label>
+					<label for="email">Your Email</label>
 					<div class="input-group">
 					<input type="email" class="form-control" id="InputEmail" name="InputEmail" placeholder="Enter Email" required	>
 					<span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
 				</div>
 				<div class="form-group">
-					<label for="InputMessage">Message</label>
+					<label for="message">Message</label>
 					<div class="input-group"
 			>
-					<textarea name="InputMessage" id="InputMessage" class="form-control" rows="5" required></textarea>
+					<textarea name="message" id="InputMessage" class="form-control" rows="5" required></textarea>
 					<span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span></div>
 				</div>
 				<div class="form-group">
 					<div class="g-recaptcha" data-sitekey="6Lc84ggUAAAAAMMbkhhgiaIDWP7WN5zYSlAZeEuR"></div><br>
-					<input type="submit" name="submit" id="submit" value="Submit" class="btn btn-info">
+					<input type="submit" name="submit" id="submit" value="Send" class="btn btn-info">
 				</div>
 				
 			</div>
@@ -64,10 +64,12 @@
 					</a>
 					<br>
 					Phone: <a href="tel:705-955-0063">705-955-0063</a>
+					<br>
+					Email: <a href="mailto:matt@tmgs.ca?Subject=WorkForce Box">matt@tmgs.ca</a>
 				</p>
 			</address>
 		</div>
-		</div>
 	</div>
+</div>
 
 <% include partials/footer.ejs %>
